# py_scraper

./: .gitignore  AUTHORS.md  Dockerfile  LICENSE  Makefile  README.md  pyproject.toml  setup.cfg
.github/: ISSUE_TEMPLATE.md
py_scraper/: __init__.py  cli.py
tests/: test_py_scraper.py
