[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "py_scraper"
repository = "https://github.com/joseporiolayats/py_scraper"
version = "0.1.0"
description = "Modern python scraping project to gather data in order to do further analysis"
authors = ["JosepOriol Ayats <oriol.ayats@gmail.com>"]
license = "MIT"
readme = "README.md"
keywords = ["py_scraper"]

[[tool.poetry.source]]
name = "default_pypi"
url = "https://pypi.python.org/simple"
secondary = false

[tool.poetry.dependencies]
python = "^3.6.5"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
cookiecutter = "^1.7.2"
tox = "^3.23.0"
bump2version = "^1.0.1"
flake8 = "^3.9.1"
pip = "^21.1"
wheel = "^0.36.2"
coverage = {extras = ["toml"], version = "^5.5"}


[tool.poetry.scripts]
py_scraper = "py_scraper.cli:main"
